--- a/index.html
+++ b/index.html
@@ -43,13 +43,14 @@
             <div class="col-lg-4 col-md-12">
                 <h4>Visualizations</h4>
                 <div> 
-                    <img class="img-thumbnail float-left relative" src= "Resources/assets/images/Fig1.png" width="50%" alt="Fig1"> <a href="Visualizations/visual1.html"></a></div>
+            
+                    <a href="Visualizations/visual1.html"><img class ="img-thumbnail float-left relative" src= "Resources/assets/images/Fig1.png" width="50%" alt="Fig1"></a></div>
                 <div> 
-                    <img class="img-thumbnail float-left relative" src= "Resources/assets/images/Fig2.png" width="50%" alt="Fig2"> </div>
+                    <a href="Visualizations/visual2.html"><img class="img-thumbnail float-left relative" src= "Resources/assets/images/Fig2.png" width="50%" alt="Fig2"></a> </div>
                 <div> 
-                    <img class="img-thumbnail float-left relative" src= "Resources/assets/images/Fig3.png" width="50%" alt="Fig3"> </div>
+                    <a href="Visualizations/visual3.html"><img class="img-thumbnail float-left relative" src= "Resources/assets/images/Fig3.png" width="50%" alt="Fig3"></a> </div>
                 <div> 
-                    <img class="img-thumbnail float-left relative" src= "Resources/assets/images/Fig4.png" width="50%" alt="Fig4"> </div>
+                    <a href="Visualizations/visual4.html"><img class="img-thumbnail float-left relative" src= "Resources/assets/images/Fig4.png" width="50%" alt="Fig4"></a> </div>
 
             </div>
     
