--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
           <a class="p-2 text-dark" href="#">Data</a>
         </nav>
     </div>
-    
+     <!-- add box around both blocks, viewport separate color -->
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-md-12">
 
                 <h1 class="title-style"> Summary: Latitude vs.X</h1>  
                 <div> 
-                    <img class="img-thumbnail float-left" src= "Resources/assets/images/Fig1.png" width="50%" alt="Fig1"> </div>
+                    <img class=" img-thumbnail float-left" src= "Resources/assets/images/Fig1.png" width="50%" alt="Fig1"> </div>
         
                     <p class="relative"> The purpose of this project was to analyze how weather changes as you get closer to the equator.
                         To accomplish this analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset on over 500 cities.</p>
