--- a/table.html
+++ b/table.html
@@ -12,9 +12,9 @@
 
 </head>
 
-<body>
+<body id="back">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container">
+        
             <a class="navbar-brand text-black nav" href="index.html" >Data Table</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -47,9 +47,9 @@
 
 
   <div class="table-responsive"></div>
-    <table border="1" class="table">
+    <table id="customer" class= "table" border="1">
       <thead>
-        <tr style="text-align: right;">
+        <tr style="text-align: center;">
           <th>City_ID</th>
           <th>City</th>
           <th>Cloudiness</th>
